--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,15 @@ dependencies {
     // Jetpack Compose Integration
     implementation "androidx.navigation:navigation-compose:2.5.0-alpha01"
 
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        freeCompilerArgs += [
+                "-Xjvm-default=all",
+        ]
+    }
 }
