--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,9 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.14'
         def nav_version = "2.4.1"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
     }
 }
-
-
 
 plugins {
     id 'com.android.application' version '7.3.0' apply false
