Implement Firebase authentication

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,12 +74,13 @@ dependencies {
 
     // Import the Firebase BoM
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation platform('com.google.firebase:firebase-bom:29.2.0')
+    implementation platform('com.google.firebase:firebase-bom:31.0.2')
 
     // Declare the dependencies for any other desired Firebase products
     // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
 
     //Co-routines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
