--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,64 +43,50 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
 
-    //Navigation component
-    def nav_version = "2.5.2"
-
-    // Java language implementation
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
-
-    // Kotlin
+    // Navigation component
+    def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-
-    // Feature module Support
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
-
-    // Testing Navigation
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     // Gson
     implementation 'com.google.code.gson:gson:2.9.0'
 
-    // Import the Firebase BoM
-    // When using the BoM, you don't specify versions in Firebase library dependencies
+    // Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
 
-    // Declare the dependencies for any other desired Firebase products
-    // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
+    // Firebase dependencies
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
 
-    //Co-routines
+    // Co-routines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
-    //Room
+    // Room
     implementation "androidx.room:room-ktx:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
     androidTestImplementation "androidx.room:room-testing:2.4.3"
 
-    //Hilt
+    // Hilt
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-compiler:2.42"
 
-    //Coil
+    // Coil
     implementation "io.coil-kt:coil:2.2.1"
 
-    //Firecoil
+    // FireCoil
     implementation 'com.github.rosariopfernandes:firecoil:2.0.0-rc03'
 
-    //DataStore
+    // DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
 
